Make sure BillingHistory is always tall enough for its dropdowns
Otherwise the Date dropdown menu may be cut off.

--- a/client/me/billing-history/style.scss
+++ b/client/me/billing-history/style.scss
@@ -358,6 +358,10 @@ textarea.billing-history__billing-details-editable {
 	padding: 0;
 }
 
+.billing-history {
+	min-height: 500px;
+}
+
 .billing-history .search-card.card,
 .billing-history__upcoming-charges .search-card.card {
 	margin: 0;
